--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Garzia lab</title>
     <!-- Garzia Lab icon -->
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -288,13 +288,10 @@
               <a class="nav-link" href="/prodotti/">Prodotti</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/specialita/">Specialità</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/ricette/">Ricette</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="/contatti/">Contatti</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/specialita/">About us</a>
             </li>
           </ul>
           <!-- Left links -->
@@ -348,8 +345,8 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3 display-3 fw-bold">SAPORI AUTENTICI</h1>
-              <h5 class="mb-4">QUALITÀ E TRADIZIONE ITALIANA IN OGNI ASSAGGIO</h5>
+                <h1 class="mb-3 display-3 fw-bold" style="font-family: 'Playfair Display', serif; font-style: italic;">Garzia</h1>
+              <h4 class="mb-4">L'ECCELLENZA ARTIGINALE, SURGELATA PER TE.</h4>
               <a
                 class="btn btn-lg m-2"
                 href="/prodotti/"
@@ -487,9 +484,13 @@
             </div>
             <div class="col-lg-6">
               <h2 style="color: var(--color-salvia);">La Nostra Storia</h2>
-              <p>Da oltre 30 anni, la nostra azienda si dedica alla produzione di alimenti genuini, seguendo le antiche ricette della tradizione italiana. La nostra missione è portare sulle vostre tavole prodotti di alta qualità, realizzati con ingredienti selezionati e tecniche artigianali.</p>
-              <p>Ogni prodotto racconta una storia di passione, dedizione e rispetto per la natura e per il territorio.</p>
-              <a href="/chi-siamo/" class="btn" style="background-color: var(--color-secondary); color: white;">Scopri di più</a>
+
+              <p>Con 12 anni di esperienza nella produzione di fritti, il nostro percorso inizia con il nome <b>"La Briciola Panuozzo"</b>, un'attività che ha visto nascere e crescere la passione per i fritti artigianali e di qualità. Ogni nostro prodotto è <b>100% artigianale</b>, frutto di un'accurata selezione degli ingredienti e di un processo di lavorazione che rispetta la tradizione gastronomica italiana.</p>
+              
+              <p>Nasce così <b>Garzia</b>, un'azienda specializzata nella produzione di fritti artigianali surgelati all’ingrosso. Ogni prodotto è realizzato a mano, con ingredienti selezionati e metodi che rispettano la tradizione, per garantire un gusto autentico e una qualità costante.</p>
+              
+              <p>Oggi ci rivolgiamo a ristoranti e pizzerie che vogliono offrire ai loro clienti un fritto genuino, buono come appena fatto.</p>
+
             </div>
           </div>
         </section>
