--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
       <div
         id="intro"
         class="p-5 text-center bg-image shadow-1-strong"
-        style="background-image: url('../images/main_wallpaper.png'); background-attachment: fixed;"
+        style="background-image: url('..\images\main_wallpaper.png'); background-attachment: fixed;"
       >
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class="d-flex justify-content-center align-items-center h-100">
