--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card product-card h-100" role="button" data-mdb-toggle="modal" data-mdb-target="#frittatinaModal">
                 <div class="overflow-hidden">
-                  <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
+                  <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
                 </div>
                 <div class="card-body">
                   <span class="product-price">€4.50</span>
