--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card product-card h-100" role="button" data-mdb-toggle="modal" data-mdb-target="#pastaModal">
                 <div class="overflow-hidden">
-                  <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Pasta Artigianale">
+                  <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Pasta Artigianale">
                 </div>
                 <div class="card-body">
                   <span class="product-price">€6.90</span>
@@ -634,7 +634,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card product-card h-100" role="button" data-mdb-toggle="modal" data-mdb-target="#conserveModal">
                 <div class="overflow-hidden">
-                  <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Conserve Tradizionali">
+                  <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Conserve Tradizionali">
                 </div>
                 <div class="card-body">
                   <span class="product-price">€7.50</span>
@@ -653,7 +653,7 @@
               <div class="col-lg-4 col-md-6 mb-4 product-reveal">
                 <div class="card product-card h-100">
                   <div class="overflow-hidden">
-                    <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
+                    <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
                   </div>
                   <div class="card-body">
                     <span class="product-price">€12.90</span>
@@ -668,7 +668,7 @@
               <div class="col-lg-4 col-md-6 mb-4 product-reveal">
                 <div class="card product-card h-100">
                   <div class="overflow-hidden">
-                    <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
+                    <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
                   </div>
                   <div class="card-body">
                     <span class="product-price">€8.50</span>
@@ -683,7 +683,7 @@
               <div class="col-lg-4 col-md-6 mb-4 product-reveal">
                 <div class="card product-card h-100">
                   <div class="overflow-hidden">
-                    <img src="../images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
+                    <img src="images/Frittatina-classica.jpg" class="card-img-top product-img" alt="Frittatina Classica">
                   </div>
                   <div class="card-body">
                     <span class="product-price">€10.90</span>
@@ -871,10 +871,10 @@
               <div id="frittatinaCarousel" class="carousel slide carousel-fade" data-mdb-ride="carousel" data-mdb-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Frittatina Classica 1">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Frittatina Classica 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/test.png" class="d-block w-100" alt="Frittatina Classica 2">
+                    <img src="images/test.png" class="d-block w-100" alt="Frittatina Classica 2">
                   </div>
                 </div>
                 <!-- Carousel indicators -->
@@ -942,19 +942,19 @@
               <div id="pastaCarousel" class="carousel slide carousel-fade" data-mdb-ride="carousel" data-mdb-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 1">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 2">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 3">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 3">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 4">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 4">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 5">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Pasta Artigianale 5">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-mdb-target="#pastaCarousel" data-mdb-slide="prev">
@@ -1021,19 +1021,19 @@
               <div id="conserveCarousel" class="carousel slide carousel-fade" data-mdb-ride="carousel" data-mdb-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 1">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 2">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 3">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 3">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 4">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 4">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 5">
+                    <img src="images/Frittatina-classica.jpg" class="d-block w-100" alt="Conserve 5">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-mdb-target="#conserveCarousel" data-mdb-slide="prev">
