added placeholder to "La nostra storia"

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
         <section class="my-5" id="about">
           <div class="row align-items-center">
             <div class="col-lg-6 mb-4 mb-lg-0">
-              <img src="https://via.placeholder.com/600x400?text=La+Nostra+Storia" class="img-fluid rounded shadow" alt="La Nostra Storia">
+              <img src="images/friggitoriaplaceholder.jpg" class="img-fluid rounded shadow" alt="La Nostra Storia">
             </div>
             <div class="col-lg-6">
               <h2 style="color: var(--color-salvia);">La Nostra Storia</h2>
